change spring version as 1.2.4
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@153 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="src" path="src/util"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/hibernate2.jar"/>
-	<classpathentry kind="lib" path="lib/spring.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/acegi-security-0.8.3.jar"/>
 	<classpathentry kind="lib" path="lib/jta.jar"/>
@@ -22,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/tapestry-contrib-4.0-beta-7.jar"/>
 	<classpathentry kind="lib" path="lib/ognl-2.6.7.jar"/>
 	<classpathentry kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="/corner-lib/spring/spring.jar"/>
 	<classpathentry kind="output" path=".classes"/>
 </classpath>
