--- a/.classpath
+++ b/.classpath
@@ -2,28 +2,27 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="src/etc"/>
-	<classpathentry kind="src" path="src/orm"/>
-	<classpathentry kind="src" path="src/util"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/hibernate2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="lib/acegi-security-0.8.3.jar"/>
-	<classpathentry kind="lib" path="lib/jta.jar"/>
-	<classpathentry kind="lib" path="lib/build/servlet.jar"/>
-	<classpathentry kind="lib" path="lib/osworkflow-2.8.0-dev.jar"/>
-	<classpathentry kind="lib" path="lib/springmodules-dev-20050907.jar"/>
-	<classpathentry kind="lib" path="lib/oscore-2.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/osuser-1.0-dev-9Sep05.jar"/>
-	<classpathentry kind="lib" path="lib/propertyset-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/hivemind-1.1-beta-3.jar"/>
-	<classpathentry kind="lib" path="lib/hivemind-lib-1.1-beta-3.jar"/>
-	<classpathentry kind="lib" path="lib/tapestry-4.0-beta-7.jar"/>
-	<classpathentry kind="lib" path="lib/tapestry-annotations-4.0-beta-7.jar"/>
-	<classpathentry kind="lib" path="lib/tapestry-contrib-4.0-beta-7.jar"/>
-	<classpathentry kind="lib" path="lib/ognl-2.6.7.jar"/>
-	<classpathentry kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="/corner-lib/spring/spring.jar"/>
-	<classpathentry kind="lib" path="/corner-lib/spring/springmodules-sandbox.jar"/>
-	<classpathentry kind="lib" path="/corner-lib/lucene/lucene-1.4.3.jar"/>
-	<classpathentry kind="output" path=".classes"/>
+	<classpathentry kind="var" path="MAVEN_REPO/junit/jars/junit-3.8.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/acegisecurity/jars/acegi-security-0.8.3.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/javax.servlet/jars/servlet-api-2.3.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/springframework/jars/spring-1.2.5.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/commons-beanutils/jars/commons-beanutils-1.5.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/hibernate/jars/hibernate-2.1.8.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/opensymphony/jars/oscore-2.2.4.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/opensymphony/jars/osuser-1.0-dev.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/opensymphony/jars/propertyset-1.3.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/opensymphony/jars/osworkflow-2.7.0.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/springmodules/jars/springmodules-dev-20050907.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/hivemind/jars/hivemind-1.1-rc-1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/hivemind/jars/hivemind-lib-1.1-rc-1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/lucene/jars/lucene-analyzers-1.9-rc1-dev.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/lucene/jars/lucene-core-1.9-rc1-dev.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/lucene/jars/lucene-highlighter-1.9-rc1-dev.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/springmodules/jars/springmodules-sandbox.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-4.0-beta-11.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-contrib-4.0-beta-11.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/ognl/jars/ognl-2.6.7.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
