--- a/.classpath
+++ b/.classpath
@@ -22,8 +22,10 @@
 	<classpathentry kind="var" path="MAVEN_REPO/lucene/jars/lucene-core-1.9-rc1-dev.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/lucene/jars/lucene-highlighter-1.9-rc1-dev.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/springmodules/jars/springmodules-sandbox.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-4.0-beta-11.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-contrib-4.0-beta-11.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/ognl/jars/ognl-2.6.7.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-4.0-beta-12.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-contrib-4.0-beta-12.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-annotations-4.0-beta-12.jar"/>
+	<classpathentry kind="con" path="com.omondo.uml.CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
