--- a/.classpath
+++ b/.classpath
@@ -16,16 +16,16 @@
 	<classpathentry kind="var" path="MAVEN_REPO/opensymphony/jars/propertyset-1.3.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/opensymphony/jars/osworkflow-2.7.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/springmodules/jars/springmodules-dev-20050907.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/hivemind/jars/hivemind-1.1-rc-1.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/hivemind/jars/hivemind-lib-1.1-rc-1.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/lucene/jars/lucene-analyzers-1.9-rc1-dev.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/lucene/jars/lucene-core-1.9-rc1-dev.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/lucene/jars/lucene-highlighter-1.9-rc1-dev.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/springmodules/jars/springmodules-sandbox.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/ognl/jars/ognl-2.6.7.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-4.0-beta-12.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-contrib-4.0-beta-12.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-annotations-4.0-beta-12.jar"/>
 	<classpathentry kind="con" path="com.omondo.uml.CONTAINER"/>
+	<classpathentry kind="var" path="MAVEN_REPO/hivemind/jars/hivemind-1.1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/hivemind/jars/hivemind-lib-1.1.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-4.0-beta-13.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-annotations-4.0-beta-13.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-contrib-4.0-beta-13.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
