--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-annotations-4.0-beta-13.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-contrib-4.0-beta-13.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/hibernate/jars/hibernate-3.0.5.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/springframework/jars/spring-mock-1.2.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
