--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-4.0.1.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-annotations-4.0.1.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/tapestry/jars/tapestry-contrib-4.0.1.jar"/>
+	<classpathentry sourcepath="ANTLR_HOME/antlrsrc.zip" kind="var" path="ANTLR_HOME/antlr.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
