--- a/project.properties
+++ b/project.properties
@@ -1,1 +1,2 @@
 maven.repo.remote=http://168.168.168.202/maven,http://mirrors.sunsite.dk/maven,http://www.ibiblio.org/maven,http://maven-plugins.sf.net/maven
+maven.compile.encoding = utf-8
