--- a/project.properties
+++ b/project.properties
@@ -1,2 +1,3 @@
 maven.repo.remote=http://168.168.168.201/maven,http://mirrors.sunsite.dk/maven,http://www.ibiblio.org/maven,http://maven-plugins.sf.net/maven
 maven.compile.encoding = utf-8
+maven.antlr.grammars = ${pom.build.sourceDirectory}/corner/orm/hibernate/expression/grammer/query-expression.g
