修改maven 的remote address
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@890 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/project.properties
+++ b/project.properties
@@ -1,3 +1,3 @@
-maven.repo.remote=http://168.168.168.201/maven,http://mirrors.sunsite.dk/maven,http://www.ibiblio.org/maven,http://maven-plugins.sf.net/maven
+maven.repo.remote=http://dev.bjmaxinfo.com/maven,http://mirrors.sunsite.dk/maven,http://www.ibiblio.org/maven,http://maven-plugins.sf.net/maven
 maven.compile.encoding = utf-8
 maven.antlr.grammars = ${pom.build.sourceDirectory}/corner/orm/hibernate/expression/grammer/query-expression.g
