--- a/project.properties
+++ b/project.properties
@@ -1,3 +1,11 @@
+#for compile
+maven.compile.source=1.5
+maven.compile.target=1.5
+maven.compile.compilerargs = -1.5
+maven.compile.nowarn = yes
+build.compiler=org.eclipse.jdt.core.JDTCompilerAdapter
 maven.repo.remote=http://dev.bjmaxinfo.com/maven,http://mirrors.sunsite.dk/maven,http://www.ibiblio.org/maven,http://maven-plugins.sf.net/maven
 maven.compile.encoding = utf-8
-maven.antlr.grammars = ${pom.build.sourceDirectory}/corner/orm/hibernate/expression/grammer/query-expression.g
+maven.antlr.grammars = /corner/orm/hibernate/expression/grammer/query-expression.g
+maven.antlr.src.dir = ${pom.build.sourceDirectory}
+maven.compile.src.set = target/antlr
