--- a/.project
+++ b/.project
@@ -16,16 +16,6 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.mevenide.ui.mavenbuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>com.omondo.uml.std.Builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
 			<name>org.antlr.eclipse.core.warningcleanerbuilder</name>
 			<arguments>
 			</arguments>
@@ -35,10 +25,21 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
+			<triggers>full,incremental,</triggers>
+			<arguments>
+				<dictionary>
+					<key>LaunchConfigHandle</key>
+					<value>&lt;project&gt;/.externalToolBuilders/org.maven.ide.eclipse.maven2Builder (1).launch</value>
+				</dictionary>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.antlr.eclipse.core.antlrnature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.maven.ide.eclipse.maven2Nature</nature>
+		<nature>org.antlr.eclipse.core.antlrnature</nature>
 		<nature>org.mevenide.ui.mavennature</nature>
 		<nature>com.omondo.uml.std.Nature</nature>
 	</natures>
