--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 	</developers>
 	<scm>
 		<connection>
-			svn:http://dev.bjmaxinfo.com/svn/corner/trunk/corner</connection>
+			scm:svn:http://dev.bjmaxinfo.com/svn/corner/trunk/corner</connection>
 		<url> http://dev.bjmaxinfo.com/projects/corner/browser/trunk/corner</url>
 	</scm>
 
