git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@999 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,7 @@
 		<site>
 			<id>dev.bjmaxinfo.com</id>
 			<url>scp://dev.bjmaxinfo.com/opt/sites/corner-sandbox</url>
+			<name>jcai</name>
 		</site>
 	</distributionManagement>
 </project>
