调整通知的策略
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1001 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<notifiers>
 			<notifier>
 				<type>jabber</type>
-				<address>jcai@bjmaxinfo.com,ghostbb@bjmaxinfo.com</address>
+				<address>jcai@bjmaxinfo.com</address>
 				<configuration>
 					<from-address>maven@bjmaxinfo.com</from-address>
 					<from-password>maven</from-password>
