git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1004 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 						<host>dev.bjmaxinfo.com</host>
 				        <port>5222</port>
 				        <sslConnection>false</sslConnection>
-						<address>jcai@bjmaxinfo.com</address>
+						<address>jcai@bjmaxinfo.com,ghostbb@bjmaxinfo.com</address>
 				</configuration>
 				<sendOnError>true</sendOnError>
 				<sendOnFailure>true</sendOnFailure>
