纠正corner上传的站点路径的错误
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1011 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -234,7 +234,7 @@
         </repository>
 		<site>
 			<id>maxinfo</id>
-			<url>scp://dev.bjmaxinfo.com/opt/sites/corner-sandbox</url>
+			<url>scp://dev.bjmaxinfo.com/opt/sites/corner</url>
 			<name>jcai</name>
 		</site>
 	</distributionManagement>
