使用maxinfo中心服务器
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1019 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -130,13 +130,9 @@
 		</plugins>
 	</reporting>
 	<repositories>
+
 		<repository>
-			<id>ibiblio</id>
-			<name>ibiblio</name>
-			<url>http://www.ibiblio.org/maven2</url>
-		</repository>
-		<repository>
-			<id>maxinfo</id>
+			<id>central</id>
 			<name>bjmaxinfo</name>
 			<url>http://dev.bjmaxinfo.com/mvn</url>
 		</repository>
