调整了maven2的repository地址
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1026 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -129,12 +129,25 @@
 			</plugin>
 		</plugins>
 	</reporting>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>maxinfo</id>
+			<name>bjmaxifo</name>
+			<url>http://dev.bjmaxinfo.com/maven2/repository</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</pluginRepository>
+	</pluginRepositories>
 	<repositories>
-
 		<repository>
-			<id>central</id>
+			<id>maxinfo</id>
 			<name>bjmaxinfo</name>
-			<url>http://dev.bjmaxinfo.com/mvn</url>
+			<url>http://dev.bjmaxinfo.com/maven2/repository</url>
+
 		</repository>
 	</repositories>
 	<dependencies>
