--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry excluding="**" output="src/test/resources" kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry sourcepath="ANTLR_HOME/antlrsrc.zip" kind="var" path="ANTLR_HOME/antlr.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
