--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>corner</name>
-	<comment>@key 32303035303932372D3130303020636F726E65722F6A756E </comment>
+	<comment>Provides some core function</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -13,16 +13,6 @@
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
-			<triggers>full,incremental,</triggers>
-			<arguments>
-				<dictionary>
-					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/org.maven.ide.eclipse.maven2Builder (1).launch</value>
-				</dictionary>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
@@ -39,8 +29,5 @@
 	<natures>
 		<nature>org.antlr.eclipse.core.antlrnature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.maven.ide.eclipse.maven2Nature</nature>
-		<nature>org.mevenide.ui.mavennature</nature>
-		<nature>com.omondo.uml.std.Nature</nature>
 	</natures>
 </projectDescription>
