--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
 	</reporting>
 	<pluginRepositories>
 		<pluginRepository>
-			<id>maxinfo</id>
+			<id>central</id>
 			<name>bjmaxifo</name>
 			<url>http://dev.bjmaxinfo.com/maven2/repository</url>
 			<snapshots>
@@ -172,14 +172,20 @@
 			<releases>
 				<enabled>true</enabled>
 			</releases>
+
 		</pluginRepository>
 	</pluginRepositories>
 	<repositories>
 		<repository>
-			<id>maxinfo</id>
+			<id>central</id>
 			<name>bjmaxinfo</name>
 			<url>http://dev.bjmaxinfo.com/maven2/repository</url>
-
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</repository>
 	</repositories>
 	<dependencies>
