--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<groupId>com.bjmaxinfo</groupId>
+		<artifactId>common</artifactId>
+		<version>0.1</version>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.bjmaxinfo.corner</groupId>
 	<artifactId>corner</artifactId>
@@ -8,56 +13,7 @@
 	<version>2.0.3</version>
 	<packaging>jar</packaging>
 	<description>Provides some core function</description>
-	<inceptionYear>2006</inceptionYear>
-	<organization>
-		<name>Beijing Maxinfo Technology Ltd.</name>
-		<url>http://www.bjmaxinfo.com/</url>
-	</organization>
-	<issueManagement>
-		<system>trac</system>
-		<url>http://dev.bjmaxinfo.com/projects/corner/newticket</url>
-	</issueManagement>
-	<ciManagement>
-		<system>continuum</system>
-		<notifiers>
-			<notifier>
-				<type>jabber</type>
 
-				<configuration>
-					<from-address>maven</from-address>
-					<from-password>maven</from-password>
-					<host>dev.bjmaxinfo.com</host>
-					<port>5222</port>
-					<sslConnection>false</sslConnection>
-					<address>jcai@bjmaxinfo.com,ghostbb@bjmaxinfo.com</address>
-				</configuration>
-				<sendOnError>true</sendOnError>
-				<sendOnFailure>true</sendOnFailure>
-				<sendOnSuccess>true</sendOnSuccess>
-			</notifier>
-		</notifiers>
-	</ciManagement>
-	<developers>
-		<developer>
-			<id>jcai</id>
-			<name>Jun Tsai</name>
-			<email>Jun.Tsai@bjmaxinfo.com</email>
-			<organization>Beijing Maxinfo</organization>
-			<roles>
-				<role>Team Leader</role>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>ghostbb</id>
-			<name>Xin Zhao</name>
-			<email>ghostbb@bjmaxinfo.com</email>
-			<organization>Beijing Maxinfo</organization>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-	</developers>
 	<scm>
 		<connection>
 			scm:svn:http://dev.bjmaxinfo.com/svn/corner/trunk/corner</connection>
@@ -68,126 +24,15 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<!-- compilerId>eclipse</compilerId -->
-					<source>1.5</source>
-					<target>1.5</target>
-					<encoding>utf-8</encoding>
-					<showWarnings>false</showWarnings>
-
-					<compilerVersion>1.5</compilerVersion>
-					<verbose>true</verbose>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-compiler-eclipse</artifactId>
-						<version>1.5.1</version>
-						<scope>rumtime</scope>
-					</dependency>
-				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antlr-plugin</artifactId>
 				<configuration>
 					<grammars>
 						/corner/orm/hibernate/expression/grammer/query-expression.g</grammars>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>clean</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<!-- This should cause the assembly:assembly goal to be triggered
-				to create a source distro whenever we package the jar file. -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<configuration>
-							<descriptorId>src</descriptorId>
-						</configuration>
-						<goals>
-							<goal>assembly</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<!-- Here, we want to package a source jar so that it can eventually be
-				packaged into the remote repository with the binary jar. -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<linksource>true</linksource>
-					<encoding>utf-8</encoding>
-					<charset>utf-8</charset>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>surefire-report-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</reporting>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>central</id>
-			<name>bjmaxifo</name>
-			<url>http://dev.bjmaxinfo.com/maven2/repository</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
 
-		</pluginRepository>
-	</pluginRepositories>
-	<repositories>
-		<repository>
-			<id>central</id>
-			<name>bjmaxinfo</name>
-			<url>http://dev.bjmaxinfo.com/maven2/repository</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -228,21 +73,7 @@
 			<artifactId>lucene-highlighter</artifactId>
 			<version>1.9.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
-			<version>1.2.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-mock</artifactId>
-			<version>1.2.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate</artifactId>
-			<version>3.1.3</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>hibernate</groupId>
 			<artifactId>hibernate</artifactId>
@@ -275,10 +106,6 @@
 		</dependency>
 	</dependencies>
 	<distributionManagement>
-		<repository>
-			<id>maxinfo</id>
-			<url>scp://dev.bjmaxinfo.com/opt/maven2</url>
-		</repository>
 		<site>
 			<id>maxinfo</id>
 			<url>scp://dev.bjmaxinfo.com/opt/sites/corner</url>
