--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
 	<version>2.0.3</version>
 	<packaging>jar</packaging>
 	<description>Provides some core function</description>
-	
+
 	<scm>
 		<connection>
 			scm:svn:http://dev.bjmaxinfo.com/svn/corner/trunk/corner</connection>
 		<url> http://dev.bjmaxinfo.com/projects/corner/browser/trunk/corner</url>
 	</scm>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -43,7 +43,7 @@
 			<releases>
 				<enabled>true</enabled>
 			</releases>
-			
+
 		</pluginRepository>
 	</pluginRepositories>
 	<repositories>
@@ -99,7 +99,7 @@
 			<artifactId>lucene-highlighter</artifactId>
 			<version>1.9.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>hibernate</groupId>
 			<artifactId>hibernate</artifactId>
@@ -129,6 +129,21 @@
 			<groupId>springmodules</groupId>
 			<artifactId>springmodules-lucene</artifactId>
 			<version>1.0-dev-20060328110632</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<version>1.2.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-mock</artifactId>
+			<version>1.2.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate</artifactId>
+			<version>3.1.3</version>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
