加入自动对antlr处理的goal
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1125 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
 					<grammars>
 						/corner/orm/hibernate/expression/grammer/query-expression.g</grammars>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
