--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,48 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>xdoclet</groupId>
+				<artifactId>maven2-xdoclet2-plugin</artifactId>
+				<configuration>
+					<configs>
+						<config>
+
+							<plugin>
+								org.xdoclet.plugin.hibernate.HibernateMappingPlugin</plugin>
+							<params>
+								<version>3.0</version>
+
+								<destdir>${basedir}/src/test/resources</destdir>
+
+							</params>
+<!-- basedir>${basedir}/src/test/java</basedir -->
+						</config>
+
+
+						<!-- run multiple plugins by repeating this <config> element -->
+					</configs>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>xdoclet-plugins</groupId>
+						<artifactId>xdoclet-plugin-hibernate</artifactId>
+						<version>1.0.2</version>
+					</dependency>
+					<dependency>
+						<groupId>xdoclet-plugins</groupId>
+						<artifactId>xdoclet-plugin-qtags</artifactId>
+						<version>1.0.2</version>
+					</dependency>
+				</dependencies>
+				<executions>
+					<execution>
+						<goals>
+							<goal>xdoclet</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<pluginRepositories>
@@ -151,6 +193,18 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate</artifactId>
 			<version>3.1.3</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>1.8.0.1</version>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
