修改了classpath以及纠正不能测试的问题
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1203 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/config/spring/config.properties
+++ b/src/test/resources/config/spring/config.properties
@@ -22,7 +22,7 @@ hibernate.show_sql=true
 
 
 
-hibernate.mapping.locations=classpath:/corner/test/model
+hibernate.mapping.locations=classpath:/corner/demo/model
 
 #for lucene
 lucene.index.dir=file:./index
