--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,49 @@
 								<destdir>${basedir}/src/test/resources</destdir>
 
 							</params>
-<!-- basedir>${basedir}/src/test/java</basedir -->
 						</config>
 
+						<config>
 
-						<!-- run multiple plugins by repeating this <config> element -->
+							<plugin>
+								corner.xdoclet.TapestryPageFormConfigPlugin</plugin>
+							<params>
+								<version>3.0</version>
+								<packageregex>corner.demo.model</packageregex>
+								<packagereplace>tapestry</packagereplace>
+								<destdir>${basedir}/src/main/webapp/generates</destdir>
+							</params>
+						</config>
+						<config>
+							<plugin>
+								corner.xdoclet.TapestryPageListConfigPlugin</plugin>
+							<params>
+								<version>3.0</version>
+								<packageregex>corner.demo.model</packageregex>
+								<packagereplace>tapestry</packagereplace>
+								<destdir>${basedir}/src/main/webapp/generates</destdir>
+							</params>
+						</config>
+						<config>
+							<plugin>
+								corner.xdoclet.TapestryHtmlFormPlugin</plugin>
+							<params>
+								<version>3.0</version>
+								<packageregex>corner.demo.model</packageregex>
+								<packagereplace>tapestry</packagereplace>
+								<destdir>${basedir}/src/main/webapp/generates</destdir>
+							</params>
+						</config>
+						<config>
+							<plugin>
+								corner.xdoclet.TapestryHtmlListPlugin</plugin>
+							<params>
+								<version>3.0</version>
+								<packageregex>corner.demo.model</packageregex>
+								<packagereplace>tapestry</packagereplace>
+								<destdir>${basedir}/src/main/webapp/generates</destdir>
+							</params>
+						</config>
 					</configs>
 				</configuration>
 				<dependencies>
@@ -69,6 +107,11 @@
 						<groupId>xdoclet-plugins</groupId>
 						<artifactId>xdoclet-plugin-qtags</artifactId>
 						<version>1.0.2</version>
+					</dependency>
+					<dependency>
+						<groupId>com.bjmaxinfo.corner</groupId>
+						<artifactId>corner-xdoclet</artifactId>
+						<version>2.0.2</version>
 					</dependency>
 				</dependencies>
 				<executions>
