生成的文件并不提交的标准库中
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1231 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 								<destdir>${basedir}/src/test/resources</destdir>
 
 							</params>
+							<addToSources>false</addToSources>
 						</config>
 
 						<config>
@@ -64,6 +65,7 @@
 								<packagereplace>tapestry</packagereplace>
 								<destdir>${basedir}/src/main/webapp/generates</destdir>
 							</params>
+							<addToSources>false</addToSources>
 						</config>
 						<config>
 							<plugin>
@@ -74,6 +76,7 @@
 								<packagereplace>tapestry</packagereplace>
 								<destdir>${basedir}/src/main/webapp/generates</destdir>
 							</params>
+							<addToSources>false</addToSources>
 						</config>
 						<config>
 							<plugin>
@@ -84,6 +87,7 @@
 								<packagereplace>tapestry</packagereplace>
 								<destdir>${basedir}/src/main/webapp/generates</destdir>
 							</params>
+							<addToSources>false</addToSources>
 						</config>
 						<config>
 							<plugin>
@@ -94,6 +98,7 @@
 								<packagereplace>tapestry</packagereplace>
 								<destdir>${basedir}/src/main/webapp/generates</destdir>
 							</params>
+							<addToSources>false</addToSources>
 						</config>
 					</configs>
 				</configuration>
