--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,15 @@
 				</executions>
 			</plugin>
 			<plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>hibernate3-maven-plugin</artifactId>
+                <configuration>
+                    <hibernate>
+                        <configurationFile>/src/test/resources/hibernate.cfg.xml</configurationFile>
+                    </hibernate>
+                </configuration>
+            </plugin>
+			<plugin>
 				<groupId>xdoclet</groupId>
 				<artifactId>maven2-xdoclet2-plugin</artifactId>
 				<configuration>
@@ -101,6 +110,7 @@
 							<addToSources>false</addToSources>
 						</config>
 					</configs>
+
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -127,7 +137,16 @@
 					</execution>
 				</executions>
 			</plugin>
+
 		</plugins>
+		<extensions>
+      <extension>
+        <groupId>hsqldb</groupId>
+        <artifactId>hsqldb</artifactId>
+        <version>1.8.0.1</version>
+      </extension>
+
+    </extensions>
 	</build>
 	<pluginRepositories>
 		<pluginRepository>
