--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,7 @@
 			<artifactId>servlet-api</artifactId>
 			<version>2.3</version>
 			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
@@ -265,13 +266,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-mock</artifactId>
 			<version>1.2.8</version>
-			
+
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate</artifactId>
 			<version>3.1.3</version>
-			
+
 		</dependency>
 
 
