--- a/pom.xml
+++ b/pom.xml
@@ -260,13 +260,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring</artifactId>
 			<version>1.2.8</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-mock</artifactId>
 			<version>1.2.8</version>
-
+			<optional>true</optional>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
