--- a/pom.xml
+++ b/pom.xml
@@ -266,7 +266,7 @@
 			<artifactId>spring-mock</artifactId>
 			<version>1.2.8</version>
 			<optional>true</optional>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
