加入语法分析器
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1298 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
 				<artifactId>maven-antlr-plugin</artifactId>
 				<configuration>
 					<grammars>
-						/corner/orm/hibernate/expression/grammer/query-expression.g</grammars>
+						/corner/orm/hibernate/expression/grammer/query-expression.g,
+						/corner/expression/calc/calc.g</grammars>
 				</configuration>
 				<executions>
 					<execution>
