--- a/pom.xml
+++ b/pom.xml
@@ -178,12 +178,6 @@
 	</repositories>
 	<dependencies>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.8</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>tapestry</groupId>
 			<artifactId>tapestry</artifactId>
 			<version>4.0.2</version>
@@ -275,8 +269,8 @@
 			<version>3.1.3</version>
 
 		</dependency>
-
-
+		<!-- for test -->
+		
 		<dependency>
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
@@ -289,6 +283,38 @@
 			<version>1.8.0.1</version>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.openqa.selenium.server</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>0.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>jetty</groupId>
+			<artifactId>org.mortbay.jetty</artifactId>
+			<version>5.1.10</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>jetty</groupId>
+			<artifactId>jasper-runtime</artifactId>
+			<version>4.2.20RC0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>jetty</groupId>
+			<artifactId>jasper-compiler</artifactId>
+			<version>4.2.20RC0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 	<distributionManagement>
 		<site>
