注释 hibernate doc的生成
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1480 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+			<!-- plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>hibernate3-maven-plugin</artifactId>
                 <configuration>
@@ -46,7 +46,7 @@
                         <configurationFile>/src/test/resources/hibernate.cfg.xml</configurationFile>
                     </hibernate>
                 </configuration>
-            </plugin>
+            </plugin -->
 			<plugin>
 				<groupId>xdoclet</groupId>
 				<artifactId>maven2-xdoclet2-plugin</artifactId>
