--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Wed May 24 11:20:48 CST 2006
+#Thu Aug 31 11:49:06 CST 2006
 eclipse.preferences.version=1
+encoding//src/main/webapp/one/AForm.page=UTF-8
+encoding//src/main/webapp/one/AList.page=UTF-8
 encoding/<project>=UTF-8
