--- a/pom.xml
+++ b/pom.xml
@@ -335,7 +335,7 @@
 			<groupId>org.openqa.selenium.server</groupId>
 			<artifactId>selenium-server</artifactId>
 			<version>0.8.1</version>
-			<scope>test</scope>
+			<optional>true</optional>
 		</dependency>
 		
 		
@@ -350,7 +350,7 @@
 			<groupId>jetty</groupId>
 			<artifactId>org.mortbay.jetty</artifactId>
 			<version>5.1.10</version>
-			<scope>test</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>jetty</groupId>
