--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Thu Aug 31 11:49:06 CST 2006
+#Mon Sep 04 15:23:36 CST 2006
 eclipse.preferences.version=1
+encoding//src/main/webapp/many2many2/ABList.page=UTF-8
 encoding//src/main/webapp/one/AForm.page=UTF-8
 encoding//src/main/webapp/one/AList.page=UTF-8
 encoding/<project>=UTF-8
