纠正编译路径
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1726 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/doc/reference/build.xml
+++ b/doc/reference/build.xml
@@ -12,7 +12,7 @@
     <dirname property="imported.basedir" file="${ant.file.ReferenceDocumentation}"/>
 
     <!-- Set build directories for all formats. -->
-    <property name="build.dir"             value="${basedir}/build"/>
+    <property name="build.dir"             value="../../target/reference"/>
 
     <!-- Support files for build process. -->
     <property name="support.dir"           value="${imported.basedir}/support"/>
