--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 			<plugin>
 				<groupId>xdoclet</groupId>
 				<artifactId>maven2-xdoclet2-plugin</artifactId>
-
+				<version>2.0.5-SNAPSHOT</version>
 				<configuration>
 					<configs>
 						<config>
