加入对calc的表达式
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1832 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,12 @@
 			<arg
 				value="${antlr.dir}/corner/orm/hibernate/expression/grammer/query-expression.g"/>
 		</java>
+		<java classname="antlr.Tool" classpathref="antlr.path">
+			<arg value="-o"/>
+			<arg value="${antlr.dir}/corner/expression/calc"/>
+			<arg
+				value="${antlr.dir}/corner/expression/calc/calc.g"/>
+		</java>
 	</target>
 	<target name="afterCompile">
 		<copy todir="${build.classes.dir}">
