加入对组件的构建
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1834 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/build.xml
+++ b/build.xml
@@ -23,5 +23,11 @@
 				<include name="corner/**/*"/>
 			</fileset>
 		</copy>
+		<copy todir="${build.classes.dir}">
+			<fileset dir="${project.src.java.dir}">
+				<exclude name="**/*.java"/>
+			</fileset>
+		</copy>
+		
 	</target>
 </project>
