删除中文说明
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1844 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/ivy.xml
+++ b/ivy.xml
@@ -4,8 +4,8 @@
 	<info organisation="bjmaxinfo" module="corner" status="integration">
 	</info>
 	  <configurations>
-    	<conf name="compile" description="编译时候需要的库"/>
-    	<conf name="test" extends="compile" description="测试时候需要的库"/>
+    	<conf name="compile" description=""/>
+    	<conf name="test" extends="compile" description=""/>
     </configurations>
 	<dependencies>
 		<dependency org="apache" name="commons-logging" rev="1.0.4" />
