--- a/ivy.xml
+++ b/ivy.xml
@@ -4,74 +4,56 @@
 	<info organisation="bjmaxinfo" module="corner" status="integration">
 	</info>
 	  <configurations>
-    	<conf name="compile" description=""/>
+    	<conf name="runtime" description=""/>
+		<conf name="compile" extends="runtime"/>
     	<conf name="test" extends="compile" description=""/>
     </configurations>
 	<dependencies>
-		<dependency org="apache" name="commons-logging" rev="1.0.4" />
-		<dependency org="hibernate" name="hibernate" rev="3.2.0.cr4"/>
-		<dependency org="hibernate" name="hibernate-annotations"
-			rev="3.2.0.cr2"/>
-		<dependency org="spring" name="spring" rev="1.2.8"/>
-		<dependency org="tapestry" name="tapestry-framework"
-			rev="4.1.1-SNAPSHOT"/>
-		<dependency org="tapestry" name="tapestry-annotations"
-			rev="4.1.1-SNAPSHOT"/>
-		<dependency org="tapestry" name="tapestry-contrib"
-			rev="4.1.1-SNAPSHOT"/>
-		<dependency org="lucene" name="lucene-core" rev="1.9.1"/>
-		<dependency org="lucene" name="lucene-analyzers" rev="1.9.1"/>
-		<dependency org="lucene" name="lucene-highlighter" rev="1.9.1"/>
-		<dependency org="apache" name="antlr" rev="2.7.6"/>
-		<dependency org="apache" name="hivemind" rev="1.1.1"/>
-		<dependency org="apache" name="hivemind-lib" rev="1.1.1"/>
-		<dependency org="ognl" name="ognl" rev="2.6.7"/>
-		<dependency org="junit" name="junit" rev="3.8"/>
+		<dependency org="apache" name="commons-logging" rev="1.0.4" conf="runtime->*"/>
+		<dependency org="hibernate" name="hibernate" rev="3.2.0.cr4" conf="runtime->*"/>
+		<dependency org="hibernate" name="hibernate-annotations" rev="3.2.0.cr2" conf="runtime->*"/>
+		<dependency org="spring" name="spring" rev="1.2.8" conf="runtime->*"/>
+		<dependency org="tapestry" name="tapestry-framework" rev="4.1.1-SNAPSHOT" conf="runtime->*"/>
+		<dependency org="tapestry" name="tapestry-annotations"	rev="4.1.1-SNAPSHOT" conf="runtime->*"/>
+		<dependency org="tapestry" name="tapestry-contrib"		rev="4.1.1-SNAPSHOT" conf="runtime->*"/>
+		<dependency org="apache" name="antlr" rev="2.7.6" conf="runtime->*"/>
+		<dependency org="apache" name="hivemind" rev="1.1.1" conf="runtime->*"/>
+		<dependency org="apache" name="hivemind-lib" rev="1.1.1" conf="runtime->*"/>
+		<dependency org="ognl" name="ognl" rev="2.6.7" conf="runtime->*"/>
+		<dependency org="oro" name="oro" rev="2.0.8" conf="runtime->*"/>
+		<dependency org="apache" name="commons-beanutils" rev="1.7.0" conf="runtime->*"/>
+		<dependency org="javax.persistence" name="ejb"	rev="3.0-public-draft-20060502" conf="runtime->*"/>
+		<dependency org="dom4j" name="dom4j" rev="1.6.1" conf="runtime->*"/>
+		<dependency org="javax/transaction" name="jta" rev="1.0.1B" conf="runtime->*"/>
+		<dependency org="hsqldb" name="hsqldb" rev="1.8.0.1" conf="test->*"/>
+		<dependency org="cglib" name="cglib-nodep" rev="2.1_3" conf="runtime->*"/>
+		<dependency org="apache" name="commons-collections" rev="2.1" conf="runtime->*"/>
+		<dependency org="ehcache" name="ehcache" rev="1.2" conf="runtime->*"/>
+		<dependency org="javassist" name="javassist" rev="3.0" conf="runtime->*"/>
+		<dependency org="apache" name="commons-codec" rev="1.3" conf="runtime->*"/>
+		<dependency org="apache" name="commons-io" rev="1.1" conf="runtime->*"/>
+		
+				
+		<dependency org="springmodules" name="springmodules-lucene"		rev="1.0-dev-20060328110632" conf="compile->*"/>
+		<dependency org="lucene" name="lucene-core" rev="1.9.1" conf="compile->*"/>
+		<dependency org="lucene" name="lucene-analyzers" rev="1.9.1" conf="compile->*"/>
+		<dependency org="lucene" name="lucene-highlighter" rev="1.9.1" conf="compile->*"/>
+		<dependency org="junit" name="junit" rev="3.8" conf="compile->*"/>
+		<dependency org="javax.servlet" name="servlet-api" rev="2.3" conf="compile->*"/>
+		
+		
 
-		<dependency org="oro" name="oro" rev="2.0.8" />
-		
-		<dependency org="apache" name="commons-beanutils" rev="1.7.0"/>
-		<dependency org="springmodules" name="springmodules-lucene"
-			rev="1.0-dev-20060328110632"/>
-		<dependency org="spring" name="spring-mock" rev="1.2.8"/>
-		
-		<dependency org="javax.persistence" name="ejb"
-			rev="3.0-public-draft-20060502"/>
-		<dependency org="org/openqa/selenium/server" name="selenium-server"
-			rev="0.8.1"/>
-		<dependency org="testng" name="testng" rev="5.0.2-jdk15"/>
-		
-		<dependency org="easymock" name="easymock" rev="2.2"/>
-		<dependency org="tapestry.javaforge" name="tapestry-testng"
-			rev="1.0.0-SNAPSHOT"/>
-		<dependency org="tapestry" name="tapestry-test"
-			rev="4.1.1-SNAPSHOT"/>
-		<dependency org="c3p0" name="c3p0" rev="0.9.0.4"/>
-		<dependency org="dom4j" name="dom4j" rev="1.6.1"/>
-		<dependency org="javax/transaction" name="jta" rev="1.0.1B"/>
-		<dependency org="hsqldb" name="hsqldb" rev="1.8.0.1"/>
-		<dependency org="cglib" name="cglib-nodep" rev="2.1_3"/>
-		<dependency org="apache" name="commons-collections"
-			rev="2.1"/>
-		<dependency org="ehcache" name="ehcache" rev="1.2"/>
-		<dependency org="javassist" name="javassist" rev="3.0"/>
-		<dependency 
-			org="jetty"
-			name="jasper-runtime"
-			rev="4.2.20RC0"
-			
-		/>
-		<dependency 
-			org="jetty"
-			name="jasper-compiler"
-			rev="4.2.20RC0"
-			
-		/>
-		<dependency org="javax.servlet" name="servlet-api" rev="2.3"/>
-		<dependency org="apache" name="commons-codec" rev="1.3"/>
-		<dependency org="apache" name="commons-io" rev="1.1"/>
-		<dependency org="log4j" name="log4j" rev="1.2.9"/>
-		<dependency org="cobertura" name="cobertura" rev="1.7"/>
+		<dependency org="log4j" name="log4j" rev="1.2.9" conf="test->*"/>
+		<dependency org="cobertura" name="cobertura" rev="1.7" conf="test->*"/>
+		<dependency org="spring" name="spring-mock" rev="1.2.8" conf="test->*"/>
+		<dependency org="org/openqa/selenium/server" name="selenium-server"		rev="0.8.1" conf="test->*"/>
+		<dependency org="testng" name="testng" rev="5.0.2-jdk15" conf="compile->*"/>
+		<dependency org="easymock" name="easymock" rev="2.2" conf="test->*"/>
+		<dependency org="tapestry.javaforge" name="tapestry-testng"	rev="1.0.0-SNAPSHOT" conf="test->*"/>
+		<dependency org="tapestry" name="tapestry-test"	rev="4.1.1-SNAPSHOT" conf="test->*"/>
+		<dependency org="c3p0" name="c3p0" rev="0.9.0.4" conf="test->*"/>
+		<dependency org="jetty"	name="jasper-runtime" rev="4.2.20RC0" conf="test->*"/>
+		<dependency org="jetty"	name="jasper-compiler" rev="4.2.20RC0" conf="test->*"/>
 		
 	</dependencies>
 </ivy-module>
