--- a/support/build.properties
+++ b/support/build.properties
@@ -16,6 +16,7 @@ build.lib.dir=${build.dir}/lib
 build.classes.dir=${build.dir}/classes
 build.classes-test.dir=${build.dir}/classes-test
 build.test.report=${build.dir}/testng-report
+build.cover.report.dir=${build.dir}/cover-report
 
 
 
