增加关联的测试用例
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1900 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -10,4 +10,5 @@ log4j.logger.org.mortbay=WARN
 log4j.logger.corner=DEBUG
 log4j.logger.com.bjmaxinfo=DEBUG
 log4j.logger.org.springframework.jdbc.support.lob=DEBUG
-log4j.logger.org.hibernate=INFO
+#log4j.logger.org.springframework.orm.hibernate3=DEBUG
+
