删除fop以减少相同文件
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1918 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/doc/dictionary/build.xml
+++ b/doc/dictionary/build.xml
@@ -94,7 +94,7 @@
     <target name="lang.docpdf.customized" depends="lang.docpdf.prepare" if="custom.fop.userconfig.present">
 
         <copy todir="${build.dir}/${lang}/pdf">
-            <fileset dir="${basedir}/${lang}/fop">
+            <fileset dir="${basedir}/../reference/${lang}/fop">
                 <include name="*"/>
             </fileset>
         </copy>
