重构公用同样的xslt
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1921 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/doc/dictionary/build.xml
+++ b/doc/dictionary/build.xml
@@ -92,7 +92,11 @@
     </target>
 
     <target name="lang.docpdf.customized" depends="lang.docpdf.prepare" if="custom.fop.userconfig.present">
-
+        <copy todir="${build.dir}/${lang}/pdf">
+            <fileset dir="${support.dir}/${lang}/fop">
+                <include name="*"/>
+            </fileset>
+		</copy>	
         <copy todir="${build.dir}/${lang}/pdf">
             <fileset dir="${basedir}/../reference/${lang}/fop">
                 <include name="*"/>
