初步建立打包源码程序
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1928 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/build.xml
+++ b/build.xml
@@ -30,4 +30,17 @@
 		</copy>
 		
 	</target>
+	<target name="source">
+		<mkdir dir="${dist.dir}"/>
+	 <zip destfile="${dist.dir}/corner-src.zip">
+
+    <fileset dir="." >
+		<include name="src/**/*.*"/>
+		<include name="build.*"/>
+		<include name="*.xml"/>
+		<include name=".*"/>
+		<include name="support/**"/>
+	</fileset>
+  </zip>
+</target>
 </project>
